@startuml

title __JOIN's Class Diagram__\n

  package  {
    package edu.uark {
      package edu.uark.dataaccess.repository {
        package edu.uark.dataaccess.repository.helpers {
          package edu.uark.dataaccess.repository.helpers.join {
            class AdditionalJoinCriteria {
                - joinOnTableName : String
                - joinOnFieldName : String
                - externalTableName : String
                - externalTableFieldName : String
                {static} - SPACE : String
                {static} - OPEN_FUNCTION : String
                {static} - CLOSE_FUNCTION : String
                {static} - PARAMETER_PLACEHOLDER : String
                {static} - TABLE_FIELD_SEPARATOR : String
                + conditional()
                + joinOnTable()
                + conditional()
                + comparison()
                + joinOnApplyFunction()
                + joinOnFieldName()
                + externalTable()
                + externalTableName()
                + externalTableFieldName()
                + equivalencyFunction()
                + toString()
                - validate()
                + AdditionalJoinCriteria()
            }
          }
        }
      }
    }
  }
  

  package  {
    package edu.uark {
      package edu.uark.dataaccess.repository {
        package edu.uark.dataaccess.repository.helpers {
          package edu.uark.dataaccess.repository.helpers.join {
            class BaseJoinCriteria {
                - joinOnTableName : String
                - joinOnFieldName : String
                - joinWithTableName : String
                - joinWithFieldName : String
                {static} - SPACE : String
                {static} - ON_KEYWORD : String
                {static} - JOIN_KEYWORD : String
                {static} - TABLE_FIELD_SEPARATOR : String
                + joinType()
                + joinOnTable()
                + joinOnTableName()
                + joinOnFieldName()
                + comparison()
                + joinWithTable()
                + joinWithTableName()
                + joinWithFieldName()
                + toString()
                - validate()
                + BaseJoinCriteria()
            }
          }
        }
      }
    }
  }
  

  package  {
    package edu.uark {
      package edu.uark.dataaccess.repository {
        package edu.uark.dataaccess.repository.helpers {
          package edu.uark.dataaccess.repository.helpers.join {
            class JoinContainer {
                - additionalCriteria : LinkedList<AdditionalJoinCriteria>
                + addAdditionalCriteria()
                + toString()
                - validate()
                + JoinContainer()
            }
          }
        }
      }
    }
  }
  

  package  {
    package edu.uark {
      package edu.uark.dataaccess.repository {
        package edu.uark.dataaccess.repository.helpers {
          package edu.uark.dataaccess.repository.helpers.join {
            enum SQLJoinType {
              NONE
              INNER
              LEFT
              label
            }
          }
        }
      }
    }
  }
  

  AdditionalJoinCriteria o-- SQLConditionalType : conditional
  AdditionalJoinCriteria o-- DatabaseTable : joinOnTable
  AdditionalJoinCriteria o-- SQLComparisonType : comparison
  AdditionalJoinCriteria o-- PostgreFunctionType : joinOnApplyFunction
  AdditionalJoinCriteria o-- DatabaseTable : externalTable
  AdditionalJoinCriteria o-- PostgreEquivalencyType : equivalencyFunction
  BaseJoinCriteria o-- SQLJoinType : type
  BaseJoinCriteria o-- DatabaseTable : joinOnTable
  BaseJoinCriteria o-- SQLComparisonType : comparison
  BaseJoinCriteria o-- DatabaseTable : joinWithTable
  JoinContainer o-- BaseJoinCriteria : baseCriteria


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
